Added socks proxy and some small changes to AbstractInboundHandler